# robert-sedgewick-algorithms-in-python-RU

./: .gitignore  README.md
Chapter01/: half_path_union.py  quick_find.py  quick_union.py  template.py  weighted_quick_union.py
Chapter02/: Chapter02.ipynb
Chapter03/: CMakeLists.txt  avg.c  avg.h  eratosthenes_sieve.c  eratosthenes_sieve.h  lg.py  main.c  point.c  point.h
Chapter03/array/: CMakeLists.txt  array.c  array.h  ex3_11.c  ex3_13.c  ex3_5.c  ex3_5.h  ex3_6.c  ex3_7.c  ex3_8.c  main.c
Chapter03/common/: call_class.c  call_function.c  embedpy.c  ex3_2.c  ex3_2.h  ex3_3.c  ex3_3.h  main.c  pointers.c  py_class.py  py_function.py
Chapter03/complex/: ex3_16.c  ex3_17.c  ex3_18.c  ex3_19.c  ex3_20.c  ex3_64.c  tmp.c  tmp_inp.c
Chapter03/embedpython_1_src/: call_class.c  call_function  call_function.c
Chapter03/ex3.6/: CMakeLists.txt  main.c
Chapter03/ex3.7/: bernoulli.c  bernoulli.h
Chapter03/ex3.8/: CMakeLists.txt  main.c
Chapter03/list/: compile.txt  ex3_10.c  ex3_11.c  ex3_13.c  ex3_24.c  ex3_25.c  ex3_26.c  ex3_27.c  ex3_28.c  ex3_34.c  ex3_38.c  ex3_47.c  ex3_9.c  list.c  list.h
Chapter03/string/: ex3_15.c  ex3_56.c  ex3_57.c  ex3_58.c  ex3_59.c
Chapter04/: AbsComplex.h  CMakeLists.txt  Complex.h  Deque.h  Item.h  Queue.h  Stack.h  UnionFind.c  UnionFind.h  array_queue.c  array_stack.c  ex4_13.c  ex4_15.c  ex4_17.c  ex4_2.c  ex4_3.c  ex4_31.c  ex4_32.c  ex4_33.c  ex4_38.c  ex4_39.c  ex4_41.c  ex4_7.c  list_queue.c  list_stack.c  set_stack.c  test_copy.c  unsafe_array_queue.c
Chapter05/: Makefile  define.c  ex5_1.c  ex5_17.c  ex5_1_1.cpp  ex5_3.c  ex5_4.c  ex5_5.c  ex5_6.c  test_embeded.py
